Models and Serializers complete

--- a/Gemini Text Embedding.ipynb
+++ b/Gemini Text Embedding.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = genai.Client(api_key=\"AIzaSyD-CcfVwDnR8OQkytOVfEJesAKWdaMgl3I\")"
+    "client = genai.Client(api_key=\"Hello\")"
    ]
   },
   {
@@ -70,8 +70,8 @@
    ],
    "source": [
     "qdrant_client = QdrantClient(\n",
-    "    url=\"https://ace3eb33-5f86-47f8-886f-31ca0aa9b66c.us-east4-0.gcp.cloud.qdrant.io:6333\", \n",
-    "    api_key=\"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.0t0K9NTzEiDENvJMBrzfGePy7kA8GuK_9n9U6tE5CLg\",\n",
+    "    url=\"Hello\", \n",
+    "    api_key=\"Hello\",\n",
     ")\n",
     "\n",
     "print(qdrant_client.get_collections())"
